updating comments to display author email

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,10 @@
-<p><%= comment.author %> said:</p>
+<p><%=
+   if(comment.email.nil?)
+      comment.author
+   else
+      mail_to comment.email, comment.author
+   end
+   %> said:</p>
 
 <blockquote>
    <%= comment.body %>
