--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,6 +19,10 @@
       <%= f.text_field :author %>
    </div>
    <div class="field">
+      <%= f.label :email %><br>
+      <%= f.email_field :email %>
+   </div>
+   <div class="field">
       <%= f.label :body %><br>
       <%= f.text_area :body %>
    </div>
